--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.1.5"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7"
   }
 }
